2021/manifests/kcert.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kcert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcert
  namespace: kcert
  labels:
    app: kcert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kcert
  template:
    metadata:
      labels:
        app: kcert
    spec:
      serviceAccountName: kcert
      containers:
      - name: kcert
        image: nabsul/kcert:v1.0.0
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: kcert
  namespace: kcert
  labels:
    app: kcert
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: kcert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kcert-2022-03-18
  namespace: kcert
  labels:
    kcert.dev/ingress: "managed"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - kcert-2022-03-18.changelog.com
    secretName: kcert-2022-03-18
  rules:
  - host: kcert-2022-03-18.changelog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kcert
            port:
              number: 80
